After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783538 - io: Fix GError leak in gdk_pixbuf_new_from_stream
io: Fix GError leak in gdk_pixbuf_new_from_stream
Status: RESOLVED FIXED
Product: gdk-pixbuf
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gdk-pixbuf-maint
gdk-pixbuf-maint
Depends on:
Blocks:
 
 
Reported: 2017-06-08 03:41 UTC by Robert Ancell
Modified: 2017-08-10 11:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
io: Fix GError leak in gdk_pixbuf_new_from_stream (2.40 KB, patch)
2017-06-08 03:41 UTC, Robert Ancell
committed Details | Review

Description Robert Ancell 2017-06-08 03:41:22 UTC
Created attachment 353370 [details] [review]
io: Fix GError leak in gdk_pixbuf_new_from_stream

In load_from_stream (as used by gdk_pixbuf_new_from_stream / gdk_pixbuf_new_from_resource) GErrors are collected, then immediately set to NULL. This means they leak and can never be passed up to the calling code.
Comment 1 Bastien Nocera 2017-08-10 11:01:10 UTC
Comment on attachment 353370 [details] [review]
io: Fix GError leak in gdk_pixbuf_new_from_stream

Looks like the review never made it to the site. I hope this didn't break anything because the diff is unreadable (through no fault of your own).

Was committed as 3428b6d710bcd1ba5f8feb1346ed424dbf708c25