io: Fix GError leak in gdk_pixbuf_new_from_stream()

https://bugzilla.gnome.org/show_bug.cgi?id=783538